tests/errors/surf_cont_09.experr
Bytes() element out of range (0..255)
